@@ -1,0 +1,29 @@
+$blog_title = 'Interpolation Testing';
+$blog_description = 'Terpolation Turpentine';
+$datadir = "$ENV{BLOSXOM_CONFIG_DIR}/../data";
+use vars qw(%hash $hashref $hash);
+%hash = (
+  abc => 123,
+  def => 456,
+  'X-Factor' => 789,
+);
+$hashref = {
+  abc => 123,
+  def => 456,
+  'X-Factor' => 789,
+};
+$Blosxom::Test::string = 'this is a test';
+%Blosxom::Test::hash = (
+  abc => 123,
+  def => 456,
+  'X-Factor' => 789,
+);
+$Blosxom::Test::hashref = {
+  abc => 123,
+  def => 456,
+  'X-Factor' => 789,
+};
+# Silence $hash warnings
+$hash = '';
+
+1;
