@@ -1,4 +1,5 @@
 v2.0.3
+    * added initial blosxom.spec and supporting files in rpm directory
     * added support for multiple plugin directories using $plugin_path
 	* changed plugin loading to use @INC instead of hardcoded 
 	  $plugin_dir
